# libsysinfo

./: .gitignore  CMakeLists.txt  README.md
inc/: errors.h
inc/sysinfo/: errors.h
inc/sysinfo/osinfo/: osinfo.h
src/: CMakeLists.txt  str.c  str.h
src/osinfo/: osinfo.h
src/osinfo/linux/: osinfo.c
